@@ -1593,7 +1593,11 @@ void unit::set_idling(const game_display &disp,const gamemap::location& loc)
 
 void unit::set_selecting(const game_display &disp,const gamemap::location& loc)
 {
-	start_animation(INT_MAX,loc,choose_animation(disp,loc,"selected"),true,false,"",0,STATE_FORGET);
+	if (preferences::show_standing_animations()) {
+		start_animation(INT_MAX,loc,choose_animation(disp,loc,"selected"),true,false,"",0,STATE_FORGET);
+	} else {
+		start_animation(INT_MAX,loc,choose_animation(disp,loc,"_disabled_selected_"),true,false,"",0,STATE_STANDING);
+	}
 }
 
 void unit::start_animation(const int start_time, const gamemap::location &loc,const unit_animation * animation,bool with_bars,bool cycles,const std::string text, const Uint32 text_color,STATE state)
